--- a/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
+++ b/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
@@ -13,11 +13,12 @@
         android:padding="10dp"
         android:background="#D8E6AF53"
         android:orientation="horizontal" >
+
         <ImageView
-            android:id="@+id/icon_back"
+            android:id="@+id/icon_backTT"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_back_page"/>
+            android:src="@drawable/ic_back_page" />
 
         <TextView
             android:id="@+id/tv_title_dat"
