--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -8,6 +8,14 @@
     android:background="@color/white"
     >
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager_slide"
         android:layout_width="match_parent"
@@ -158,7 +166,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_news_trangchu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clipToPadding="true"
         android:nestedScrollingEnabled="false"/>
+
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
