--- a/app/src/main/res/layout/fragment_quan_li_tin.xml
+++ b/app/src/main/res/layout/fragment_quan_li_tin.xml
@@ -3,16 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FragmentQuanLiTin"
     android:orientation="vertical"
-    >
+    tools:context=".Fragment.FragmentQuanLiTin">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:background="#D8E6AF53"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_title_dat"
@@ -24,6 +23,7 @@
             android:textColor="#0B0B0B"
             android:textSize="18dp"
             android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,12 +31,12 @@
             android:layout_alignParentRight="true"
             android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/icon_notifi"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_notifi" />
+            <ImageView
+                android:id="@+id/icon_notifi"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_notifi" />
 
             <ImageView
                 android:layout_width="28dp"
@@ -44,8 +44,12 @@
                 android:layout_marginRight="10dp"
                 android:src="@drawable/ic_message" />
         </LinearLayout>
-
-
     </RelativeLayout>
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvQuanLyTin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="50dp"/>
 </LinearLayout>
