--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -7,153 +7,167 @@
     android:orientation="vertical"
     android:background="@color/white"
     >
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager_slide"
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="220dp"/>
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/circle_indicator"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-
-        tools:ignore="MissingClass" />
-
-    <HorizontalScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:layout_height="wrap_content"
-        >
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager_slide"
             android:layout_width="match_parent"
+            android:layout_height="220dp"/>
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/circle_indicator"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+
+            tools:ignore="MissingClass" />
+        <HorizontalScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:scrollbars="none"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            >
             <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/transport"/>
-                <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
                     android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Miễn phí vận chuyển"
-                    android:textSize="16dp"/>
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/transport"/>
+                    <TextView
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Miễn phí vận chuyển"
+                        android:textSize="16dp"/>
 
 
-            </LinearLayout>
-            <!-- 2-->
-            <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/tin_da_luu"/>
-                <TextView
+                </LinearLayout>
+                <!-- 2-->
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/tin_da_luu"/>
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Tin đăng đã lưu"
+                        android:textSize="16dp"/>
+                </LinearLayout>
+                <!--        3-->
+                <LinearLayout
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Tin đăng đã lưu"
-                    android:textSize="16dp"/>
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/danh_gia"/>
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Đánh giá từ tôi"
+                        android:textSize="16dp"/>
+                </LinearLayout>
+                <!--        4-->
+                <!--        5-->
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/history_search"/>
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Chia sẻ"
+                        android:textSize="16dp"/>
+                </LinearLayout>
+                <!--        6-->
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/img_vong_quay"/>
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Vòng quay may mắn"
+                        android:textSize="16dp"/>
+                </LinearLayout>
+                <!-- 2-->
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+                    <ImageView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/tin_da_luu"/>
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textColor="#020202"
+                        android:text="Tin đăng đã lưu"
+                        android:textSize="16dp"/>
+                </LinearLayout>
             </LinearLayout>
-            <!--        3-->
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/danh_gia"/>
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Đánh giá từ tôi"
-                    android:textSize="16dp"/>
-            </LinearLayout>
-            <!--        4-->
-            <!--        5-->
-            <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/history_search"/>
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Chia sẻ"
-                    android:textSize="16dp"/>
-            </LinearLayout>
-            <!--        6-->
-            <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/img_vong_quay"/>
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Vòng quay may mắn"
-                    android:textSize="16dp"/>
-            </LinearLayout>
-            <!-- 2-->
-            <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                >
-                <ImageView
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:src="@drawable/tin_da_luu"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:textColor="#020202"
-                    android:text="Tin đăng đã lưu"
-                    android:textSize="16dp"/>
-            </LinearLayout>
-        </LinearLayout>
-    </HorizontalScrollView>
+        </HorizontalScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_news_trangchu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="true"/>
+    </LinearLayout>
+
+</ScrollView>
 
 </LinearLayout>
