--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/white"
     >
-
+<!--âsasasasasasasasasas-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
