--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="trans...">#00000000</color>
     <color name="white_opacity_50">#CCFFFFFF</color>
     <color name="red">#FF0000</color>
+<!--    asaassasasa-->
 </resources>
