--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -3,15 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.FragmentTrangChu"
     android:orientation="vertical"
-    android:background="@color/white"
-    >
+    android:background="@color/white">
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        app:queryHint="Nhập tiêu đề tìm kiếm"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rcvFilter"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
 
     <ScrollView
+        android:id="@+id/scrView"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/rcvFilter"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
+            android:id="@+id/lnLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
@@ -35,6 +54,7 @@
                 android:layout_height="wrap_content"
                 >
                 <LinearLayout
+                    android:id="@+id/ln1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -162,6 +182,24 @@
                     </LinearLayout>
                 </LinearLayout>
             </HorizontalScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_corner"
+                android:padding="6dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bạn muốn xem danh mục : "
+                    android:textStyle="bold"
+                    android:textSize="18dp"/>
+                <Spinner
+                    android:id="@+id/spn_phanLoaiTin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_news_trangchu"
                 android:layout_width="match_parent"
@@ -172,5 +210,11 @@
         </LinearLayout>
 
     </ScrollView>
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvFilter"
+            android:layout_width="match_parent"
+            android:background="#EFBF48"
+            android:layout_alignParentTop="true"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </LinearLayout>
