--- a/app/src/main/res/layout/item_result_search.xml
+++ b/app/src/main/res/layout/item_result_search.xml
@@ -33,14 +33,26 @@
                 android:layout_height="wrap_content"
                 android:text="12-12-2922"
                 android:textSize="16dp" />
-
-            <TextView
-                android:id="@+id/tvPrice_rs_search"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="120000"
-                android:textColor="#139EEA"
-                android:textSize="18dp" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tvPrice_rs_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="120000"
+                    android:textColor="#139EEA"
+                    android:textSize="18dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" VND"
+                    android:textColor="#139EEA"
+                    android:textSize="18dp" />
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
