--- a/app/src/main/res/layout/item_trangchu_news.xml
+++ b/app/src/main/res/layout/item_trangchu_news.xml
@@ -65,14 +65,28 @@
         android:layout_height="wrap_content"
         android:text="DESCRIPSION"
         android:textColor="@color/gray_2"/>
-    <TextView
-        android:id="@+id/tv_item_trangchu_fee"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="FEE"
-        android:textStyle="bold"
-        android:textColor="@color/red"
-        android:textSize="20dp"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_item_trangchu_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FEE"
+            android:textStyle="bold"
+            android:textColor="@color/red"
+            android:textSize="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" VND"
+            android:textStyle="bold"
+            android:textColor="@color/red"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
