--- a/app/src/main/res/layout/item_trangchu_news.xml
+++ b/app/src/main/res/layout/item_trangchu_news.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:gravity="center"
+    android:id="@+id/item_news_trang_chu"
     android:background="@drawable/bg_item_trang_chu"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
