--- a/app/src/main/res/layout/activity_chitiet_news.xml
+++ b/app/src/main/res/layout/activity_chitiet_news.xml
@@ -7,9 +7,37 @@
     android:background="@color/gray_2"
     android:orientation="vertical"
     tools:context=".chitiet_news">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="#D8E6AF53"
+        android:orientation="horizontal" >
+        <ImageView
+            android:id="@+id/icon_back"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/ic_back_page"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="35dp"
+            android:layout_toRightOf="@+id/icon_back"
+            android:gravity="center"
+            android:text="Chi tiết Tin"
+            android:textColor="#0B0B0B"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/img_chitiet_pic"
         android:layout_width="match_parent"
@@ -166,7 +194,7 @@
             android:id="@+id/tv_chitiet_title_dacdiem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RCV chitiet dacdiem"
+            android:text="Chi Tiết Đặc Điểm"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -193,7 +221,7 @@
             android:text="Mô tả chi tiết"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_chitiet_mota_thongtin"
@@ -207,7 +235,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="liên hệ..."
-            android:textColor="@color/blue" />
+            android:textColor="@color/blue"/>
 
     </LinearLayout>
 
@@ -229,19 +257,32 @@
 
             />
 
-        <TextView
-            android:id="@+id/tv_chitiet_nguoiban_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="start"
-            android:paddingStart="15dp"
-            android:text="tên người đăng tin"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="bold"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical" >
+            <TextView
+                android:id="@+id/tv_chitiet_nguoiban_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:text="tên người đăng tin"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold"
 
-            />
+                />
+            <TextView
+                android:id="@+id/tvSdtUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:paddingStart="15dp"
+                android:textStyle="bold"
+                android:text="09873"/>
+        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -280,7 +321,7 @@
             android:id="@+id/tv_chitiet_tinkhac1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tin đăng khác của người bán"
+            android:text="Những Tin Liên Quan"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -309,9 +350,11 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_chitiet_tinkhac2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rcv_chitiet_tinkhac2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"/>-->
     </LinearLayout>
+    </LinearLayout>
+</ScrollView>
 </LinearLayout>
