--- a/app/src/main/res/layout/activity_chon_danh_muc_xe_co.xml
+++ b/app/src/main/res/layout/activity_chon_danh_muc_xe_co.xml
@@ -15,16 +15,17 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_back_page"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Chọn danh mục"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_toRightOf="@+id/icon_back"
                 android:layout_marginEnd="35dp"
+                android:layout_toRightOf="@+id/icon_back"
                 android:gravity="center"
-                android:textColor="#0B0B0B"/>
+                android:text="Chọn danh mục"
+                android:textColor="#0B0B0B"
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
